# github_notifications_bot

./: .gitignore  changes.py  config.py  lefthook.yml  main.py  pyproject.toml  readme.md  runner.py
config/: __init__.py
extractors/: ChangesCommitExtractor.py  __init__.py  extractors.py
journal/: __init__.py
runners/: __init__.py
tests/: test_config.py  test_config.yaml  test_config_without_token.yaml  test_extractors.py  test_journal.py  test_runner.py
