[tool.poetry]
name = "github_notifications_bot"
version = "0.1.0"
description = ""
authors = ["vlzh <vlzh@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PyGithub = "^1.51"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pylint = "^2.5.3"
mypy = "^0.782"
black = {version = "^19.10b0", allow-prereleases = true}
faker = "^4.1.1"
rope = "^0.17.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

